; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_glsl_shader.c_shader_glsl_release_sample_function.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_glsl_shader.c_shader_glsl_release_sample_function.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_shader_context = type { %struct.shader_glsl_ctx_priv* }
%struct.shader_glsl_ctx_priv = type { i32 }
%struct.glsl_sample_function = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wined3d_shader_context*, %struct.glsl_sample_function*)* @shader_glsl_release_sample_function to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @shader_glsl_release_sample_function(%struct.wined3d_shader_context* %0, %struct.glsl_sample_function* %1) #0 {
  %3 = alloca %struct.wined3d_shader_context*, align 8
  %4 = alloca %struct.glsl_sample_function*, align 8
  %5 = alloca %struct.shader_glsl_ctx_priv*, align 8
  store %struct.wined3d_shader_context* %0, %struct.wined3d_shader_context** %3, align 8
  store %struct.glsl_sample_function* %1, %struct.glsl_sample_function** %4, align 8
  %6 = load %struct.wined3d_shader_context*, %struct.wined3d_shader_context** %3, align 8
  %7 = getelementptr inbounds %struct.wined3d_shader_context, %struct.wined3d_shader_context* %6, i32 0, i32 0
  %8 = load %struct.shader_glsl_ctx_priv*, %struct.shader_glsl_ctx_priv** %7, align 8
  store %struct.shader_glsl_ctx_priv* %8, %struct.shader_glsl_ctx_priv** %5, align 8
  %9 = load %struct.shader_glsl_ctx_priv*, %struct.shader_glsl_ctx_priv** %5, align 8
  %10 = getelementptr inbounds %struct.shader_glsl_ctx_priv, %struct.shader_glsl_ctx_priv* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.glsl_sample_function*, %struct.glsl_sample_function** %4, align 8
  %13 = getelementptr inbounds %struct.glsl_sample_function, %struct.glsl_sample_function* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @string_buffer_release(i32 %11, i32 %14)
  ret void
}

declare dso_local i32 @string_buffer_release(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
